# emb-project

./: .mxproject  CMakeLists.txt  main.c  test.ioc
.github/workflows/: cmake-single-platform.yml
EWARM/: test.ewd  test.ewp
Inc/: stm32l1xx_hal_conf.h  stm32l1xx_it.h
Src/: main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
